# jakobhansen.dev

./: .gitignore  Cargo.toml  build-recipes  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js  vercel.json
.storybook/: main.js  main.ts
api/: hello.ts  recipes.rs
api/recipe/: [id].rs
components/: Modal.tsx  NavBar.tsx
components/blog/: BlogPostLink.tsx  BlogPostsList.tsx  PostDivider.tsx  PostLayout.tsx
components/experience/: ExperienceBox.tsx  TimePeriod.tsx  TimePeriodDivider.tsx
components/food/: Recipe.tsx  RecipeList.tsx
components/stats/: Monkeytype.tsx
components/timeline/: CompanyButton.tsx  Divider.tsx  Event.tsx  EventDivider.tsx  Experience.tsx  ExperienceEvent.tsx  Timeline.tsx
content/: statspage.mdx
data/experiences/: teachingassistant.mdx  uiobachelors.mdx
data/recipes/: briesalad.cook  chickenburrito.cook  chickenparmesan.cook  salmonpokebowl.cook  shakshuka.cook  steaksandwich.cook
experiences/: bekk.mdx  microsoft.mdx  microsoftfulltime.mdx  microsoftinternship.mdx  uiobachelors.mdx  uiomasters.mdx
lib/blog/: getBlogPosts.tsx  getSocials.tsx
lib/cooklang/: parse.ts  parse.tsx  process.ts  types.ts
lib/datafetching/: monkeytype.ts  recipes.ts
lib/experiences/: getExperiences.ts
lib/food/: getRecipes.ts
pages/: _app.tsx  index.tsx
pages/aboutme/: index.tsx
pages/blog/: index.tsx
pages/experience/: index.tsx
pages/food/: [id].tsx  index.tsx
pages/portfolio/: index.tsx
public/: statspage.mdx
scripts/: build-recipes  build-recipes.rs  parse-recipe.js
styles/: globals.css
(+4 files in other folders)
