[package]
name = "jakobhansen-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
vercel_runtime = { version = "1" }
cooklang = "0.14.0"
url = "2.4.1"

[[bin]]
name = "recipes"
path = "api/recipes.rs"

[[bin]]
name = "recipe"
path = "api/recipe/[id].rs"
